@@ -1,13 +1,10 @@
 package edu.uws.ii.springboot.services;
 
-import edu.uws.ii.springboot.commands.addresses.AssignCustomerToAddressCommand;
-import edu.uws.ii.springboot.commands.addresses.RegisterAddressCommand;
-import edu.uws.ii.springboot.commands.addresses.SetAddressAsMainCommand;
-import edu.uws.ii.springboot.commands.customers.GetCustomersCommand;
 import edu.uws.ii.springboot.commands.products.DeleteProductCommand;
 import edu.uws.ii.springboot.commands.products.EditProductCommand;
 import edu.uws.ii.springboot.commands.products.GetProductsCommand;
 import edu.uws.ii.springboot.commands.products.RegisterProductCommand;
+import edu.uws.ii.springboot.commands.products.properties.DeletePropertyCommand;
 import edu.uws.ii.springboot.commands.products.properties.EditPropertyCommand;
 import edu.uws.ii.springboot.commands.products.properties.GetPropertiesCommand;
 import edu.uws.ii.springboot.commands.products.properties.RegisterPropertyCommand;
@@ -22,7 +19,6 @@ import edu.uws.ii.springboot.models.Unit;
 import edu.uws.ii.springboot.repositories.IProductsRepository;
 import edu.uws.ii.springboot.repositories.IPropertiesRepository;
 import edu.uws.ii.springboot.repositories.IUnitsRepository;
-import edu.uws.ii.springboot.specifications.CustomerSpecifications;
 import edu.uws.ii.springboot.specifications.ProductSpecifications;
 import edu.uws.ii.springboot.specifications.PropertySpecifications;
 import edu.uws.ii.springboot.specifications.UnitSpecifications;
@@ -32,11 +28,12 @@ import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.util.List;
+import java.util.Objects;
 
 @Service
 public class ProductsService implements IProductsService {
 
-    private final IUnitsRepository  unitsRepository;
+    private final IUnitsRepository unitsRepository;
     private final IProductsRepository productsRepository;
     private final IPropertiesRepository propertiesRepository;
 
@@ -58,9 +55,7 @@ public class ProductsService implements IProductsService {
         if (command == null) throw new IllegalArgumentException("Przekazano pusty obiekt komendy");
 
         var product = command.getProduct();
-
-        if(product == null)
-            throw new IllegalArgumentException("Przekazano pusty obiekt produktu");
+        if (product == null) throw new IllegalArgumentException("Przekazano pusty obiekt produktu");
 
         var sku = product.getSku();
         var name = product.getName();
@@ -69,129 +64,119 @@ public class ProductsService implements IProductsService {
 
         if (sku == null || sku.isBlank())
             throw new IllegalArgumentException("Nie podano sku produktu");
-
         if (name == null || name.isBlank())
             throw new IllegalArgumentException("Nie podano nazwy produktu");
-
         if (unit == null || unit.isBlank())
             throw new IllegalArgumentException("Nie podano jednostki podstawowej produktu");
-
         if (ean == null || ean.isBlank())
             throw new IllegalArgumentException("Nie podano ean produktu");
 
-        var skuExistsCommand = new GetProductsCommand();
-        skuExistsCommand.whereSkuEquals(sku);
-        if(!(this.getProducts(skuExistsCommand).getFirst() == null))
-            throw new IllegalArgumentException("Produkt o podanym sku już istnieje");
+        var skuExists = !this.getProducts(new GetProductsCommand().whereSkuEquals(sku)).isEmpty();
+        if (skuExists) throw new IllegalArgumentException("Produkt o podanym sku już istnieje");
 
-        var nameExistsCommand = new GetProductsCommand();
-        nameExistsCommand.whereNameEquals(name);
-        if(!(this.getProducts(nameExistsCommand).getFirst() == null))
-            throw new IllegalArgumentException("Produkt o podanej nazwie już istnieje");
+        var nameExists = !this.getProducts(new GetProductsCommand().whereNameEquals(name)).isEmpty();
+        if (nameExists) throw new IllegalArgumentException("Produkt o podanej nazwie już istnieje");
 
-        var eanExistsCommand = new GetProductsCommand();
-        eanExistsCommand.whereEanEquals(ean);
-        if(!(this.getProducts(eanExistsCommand).getFirst() == null))
-            throw new IllegalArgumentException("Produkt o podanym ean już istnieje");
+        var eanExists = !this.getProducts(new GetProductsCommand().whereEanEquals(ean)).isEmpty();
+        if (eanExists) throw new IllegalArgumentException("Produkt o podanym ean już istnieje");
 
-        var prod = productsRepository.save(product);
-
-        return prod;
+        return productsRepository.save(product);
     }
 
     @Override
     @Transactional
     public void editProduct(EditProductCommand command) {
-
         if (command == null) throw new IllegalArgumentException("Przekazano pusty obiekt komendy");
+
+        if (command.getId() == null || command.getId() == 0)
+            throw new IllegalArgumentException("Nie przekazano identyfikatora produktu");
 
         var sku = command.getSku();
         var name = command.getName();
         var unit = command.getUnit();
         var ean = command.getEan();
 
-        if (sku.isBlank())
+        if (sku != null && sku.isBlank())
             throw new IllegalArgumentException("Nie podano sku produktu");
-
-        if (name.isBlank())
+        if (name != null && name.isBlank())
             throw new IllegalArgumentException("Nie podano nazwy produktu");
-
-        if (unit.isBlank())
+        if (unit != null && unit.isBlank())
             throw new IllegalArgumentException("Nie podano jednostki podstawowej produktu");
-
-        if (ean.isBlank())
+        if (ean != null && ean.isBlank())
             throw new IllegalArgumentException("Nie podano ean produktu");
 
-        if(command.getId() == null || command.getId() == 0)
-            throw new IllegalArgumentException("Nie przekazano identyfikatora produktu");
+        var list = this.getProducts(new GetProductsCommand().whereIdEquals(command.getId()));
+        var product = list.isEmpty() ? null : list.get(0);
 
-        var product = this.getProducts(new GetProductsCommand().whereIdEquals(command.getId())).getFirst();
-
-        if(product == null)
+        if (product == null)
             throw new EntityNotFoundException("Nie znaleziono produktu o podanym identyfikatorze");
 
-        if(sku != null) {
-            var skuExistsCommand = new GetProductsCommand();
-            skuExistsCommand.whereSkuEquals(sku).whereIsNotArchival();
-            var skuProduct = this.getProducts(skuExistsCommand).getFirst();
-            if (skuProduct != null && skuProduct.getId() != command.getId()) {
+        if (sku != null) {
+            var skuDup = this.getProducts(new GetProductsCommand().whereSkuEquals(sku).whereIsNotArchival())
+                    .stream()
+                    .filter(p -> !Objects.equals(p.getId(), command.getId()))
+                    .findFirst()
+                    .orElse(null);
+
+            if (skuDup != null)
                 throw new IllegalArgumentException("Produkt o podanym sku już istnieje");
-            }
+
             product.setSku(sku);
         }
 
-        if(name != null) {
-            var nameExistsCommand = new GetProductsCommand();
-            nameExistsCommand.whereNameEquals(name).whereIsNotArchival();
-            var nameProduct = this.getProducts(nameExistsCommand).getFirst();
-            if (nameProduct != null && product.getId() != nameProduct.getId()) {
+        if (name != null) {
+            var nameDup = this.getProducts(new GetProductsCommand().whereNameEquals(name).whereIsNotArchival())
+                    .stream()
+                    .filter(p -> !Objects.equals(p.getId(), command.getId()))
+                    .findFirst()
+                    .orElse(null);
+
+            if (nameDup != null)
                 throw new IllegalArgumentException("Produkt o podanej nazwie już istnieje");
-            }
+
             product.setName(name);
         }
 
-        if(ean != null) {
-            var eanExistsCommand = new GetProductsCommand();
-            eanExistsCommand.whereEanEquals(ean).whereIsNotArchival();
-            var eanProduct = this.getProducts(eanExistsCommand).getFirst();
-            if (eanProduct != null && product.getId() != eanProduct.getId()) {
+        if (ean != null) {
+            var eanDup = this.getProducts(new GetProductsCommand().whereEanEquals(ean).whereIsNotArchival())
+                    .stream()
+                    .filter(p -> !Objects.equals(p.getId(), command.getId()))
+                    .findFirst()
+                    .orElse(null);
+
+            if (eanDup != null)
                 throw new IllegalArgumentException("Produkt o podanym ean już istnieje");
-            }
+
             product.setEan(ean);
         }
 
-        if(command.getBrand() != null)
+        if (command.getBrand() != null)
             product.setBrand(command.getBrand());
 
-        if(command.getDescription() != null)
+        if (command.getDescription() != null)
             product.setDescription(command.getDescription());
 
-        if(command.getUnit() != null)
+        if (command.getUnit() != null)
             product.setUnit(command.getUnit());
 
-        if(command.getPhotoContentType() != null)
+        if (command.getPhotoContentType() != null)
             product.setPhotoContentType(command.getPhotoContentType());
 
-        if(command.getPhotoContent() != null)
-            product.setPhotoContent(command.getPhotoContent());
-
-        if(command.getPhotoContent() != null)
+        if (command.getPhotoContent() != null)
             product.setPhotoContent(command.getPhotoContent());
 
         productsRepository.save(product);
-
     }
 
     @Override
     @Transactional
     public void deleteProduct(DeleteProductCommand command) {
-
         if (command == null) throw new IllegalArgumentException("Przekazano pusty obiekt komendy");
-
         if (command.getId() == null || command.getId() == 0)
             throw new IllegalArgumentException("Nie przekazano identyfikatora produktu");
 
-        var product = this.getProducts(new GetProductsCommand().whereIdEquals(command.getId())).getFirst();
+        var list = this.getProducts(new GetProductsCommand().whereIdEquals(command.getId()));
+        var product = list.isEmpty() ? null : list.get(0);
 
         if (product == null)
             throw new EntityNotFoundException("Nie znaleziono produktu o podanym identyfikatorze");
@@ -203,17 +188,16 @@ public class ProductsService implements IProductsService {
         productsRepository.save(product);
     }
 
+
     @Override
     @Transactional
     public void deleteUnit(DeleteUnitCommand command) {
         if (command == null) throw new IllegalArgumentException("Przekazano pusty obiekt komendy");
-
-        if(command.getId() == null || command.getId() == 0)
+        if (command.getId() == null || command.getId() == 0)
             throw new IllegalArgumentException("Nie przekazano identyfikatora jednostki");
 
         var unit = unitsRepository.getById(command.getId());
-
-        if(unit == null)
+        if (unit == null)
             throw new EntityNotFoundException("Jednostka o podanym identyfikatorze nie istnieje");
 
         unitsRepository.delete(unit);
@@ -224,36 +208,50 @@ public class ProductsService implements IProductsService {
     public void editUnit(EditUnitCommand command) {
         if (command == null) throw new IllegalArgumentException("Przekazano pusty obiekt komendy");
 
-        if(command.getId() == null || command.getId() == 0)
-            throw new IllegalArgumentException("Nie przekazano identyfikatora właściwości");
+        if (command.getId() == null || command.getId() == 0)
+            throw new IllegalArgumentException("Nie przekazano identyfikatora jednostki");
 
-        if(command.getUnitName().isBlank())
+        if (command.getUnitName() != null && command.getUnitName().isBlank())
             throw new IllegalArgumentException("Nazwa jednostki nie może być pusta");
 
-        if(command.getUnitMultiplier() == BigDecimal.ZERO)
-            throw new IllegalArgumentException("Przelicznik jednostki nie może być zerowy");
-
-        if(command.getUnitMultiplier().signum() < 0)
-            throw new IllegalArgumentException("Przelicznik jednostki nie może być ujemny");
+        if (command.getUnitMultiplier() != null) {
+            if (command.getUnitMultiplier().compareTo(BigDecimal.ZERO) == 0)
+                throw new IllegalArgumentException("Przelicznik jednostki nie może być zerowy");
+            if (command.getUnitMultiplier().signum() < 0)
+                throw new IllegalArgumentException("Przelicznik jednostki nie może być ujemny");
+        }
 
         var unit = unitsRepository.getById(command.getId());
-
-        if(unit == null)
+        if (unit == null)
             throw new EntityNotFoundException("Jednostka o podanym identyfikatorze nie istnieje");
 
-        if(command.getUnitName() == unit.getUnitName() && command.getUnitMultiplier() == unit.getMultiplier())
+        boolean nameUnchanged = (command.getUnitName() == null)
+                || Objects.equals(command.getUnitName(), unit.getUnitName());
+
+        boolean multiplierUnchanged = (command.getUnitMultiplier() == null)
+                || (unit.getMultiplier() != null && command.getUnitMultiplier().compareTo(unit.getMultiplier()) == 0);
+
+        if (nameUnchanged && multiplierUnchanged)
             return;
 
-        var sameUnitCommand = new GetUnitsCommand().whereUnitNameEquals(command.getUnitName()).whereProductIdEquals(unit.getProduct().getId());
-        var sameUnit = unitsRepository.findAll(UnitSpecifications.byFilter(sameUnitCommand));
+        if (command.getUnitName() != null) {
+            var sameUnitCommand = new GetUnitsCommand()
+                    .whereUnitNameEquals(command.getUnitName())
+                    .whereProductIdEquals(unit.getProduct().getId());
 
-        if(sameUnit != null)
-            throw new IllegalArgumentException("Jednostka o takiej nazwie już istnieje");
+            var sameUnits = unitsRepository.findAll(UnitSpecifications.byFilter(sameUnitCommand));
 
-        if(command.getUnitMultiplier() != null)
+            boolean duplicateExists = sameUnits.stream()
+                    .anyMatch(u -> !Objects.equals(u.getId(), unit.getId()));
+
+            if (duplicateExists)
+                throw new IllegalArgumentException("Jednostka o takiej nazwie już istnieje");
+        }
+
+        if (command.getUnitMultiplier() != null)
             unit.setMultiplier(command.getUnitMultiplier());
 
-        if(command.getUnitName() != null)
+        if (command.getUnitName() != null)
             unit.setUnitName(command.getUnitName());
 
         unitsRepository.save(unit);
@@ -263,47 +261,57 @@ public class ProductsService implements IProductsService {
     @Transactional
     public Unit registerUnit(RegisterUnitCommand command) {
         if (command == null) throw new IllegalArgumentException("Przekazano pusty obiekt komendy");
-
-        if(command.getUnit() == null)
-            throw new IllegalArgumentException("Przekazano pusty obiekt jednostki");
+        if (command.getUnit() == null) throw new IllegalArgumentException("Przekazano pusty obiekt jednostki");
 
         var unitName = command.getUnit().getUnitName();
-        var multiplierUnit = command.getUnit().getMultiplier();
-        var productId = command.getUnit().getProduct().getId();
+        var multiplier = command.getUnit().getMultiplier();
 
-        if(unitName == null || unitName.isBlank())
+        var productObj = command.getUnit().getProduct();
+        var productId = (productObj == null) ? null : productObj.getId();
+
+        if (unitName == null || unitName.isBlank())
             throw new IllegalArgumentException("Nie podano nazwy jednostki");
 
-        if(productId == null || productId == 0)
+        if (multiplier == null)
+            throw new IllegalArgumentException("Nie podano przelicznika jednostki");
+        if (multiplier.compareTo(BigDecimal.ZERO) == 0)
+            throw new IllegalArgumentException("Przelicznik jednostki nie może być zerowy");
+        if (multiplier.signum() < 0)
+            throw new IllegalArgumentException("Przelicznik jednostki nie może być ujemny");
+
+        if (productId == null || productId == 0)
             throw new IllegalArgumentException("Nie podano identyfikatora produktu");
 
-        var product =  this.getProducts(new GetProductsCommand().whereIdEquals(productId)).getFirst();
-        if(product == null)
+        var prodList = this.getProducts(new GetProductsCommand().whereIdEquals(productId));
+        var product = prodList.isEmpty() ? null : prodList.get(0);
+
+        if (product == null)
             throw new EntityNotFoundException("Produkt o podanym identyfikatorze nie istnieje");
 
-        var sameUnitCommand = new GetUnitsCommand().whereUnitNameEquals(unitName).whereProductIdEquals(productId);
-        var sameUnit = unitsRepository.findAll(UnitSpecifications.byFilter(sameUnitCommand));
+        var sameUnitCommand = new GetUnitsCommand()
+                .whereUnitNameEquals(unitName)
+                .whereProductIdEquals(productId);
 
-        if(sameUnit != null)
+        var sameUnits = unitsRepository.findAll(UnitSpecifications.byFilter(sameUnitCommand));
+
+        if (!sameUnits.isEmpty())
             throw new IllegalArgumentException("Jednostka już istnieje");
 
         var newUnit = command.getUnit();
         newUnit.setProduct(product);
 
-        return  unitsRepository.save(newUnit);
+        return unitsRepository.save(newUnit);
     }
 
     @Override
     @Transactional
-    public void deleteProperty(DeleteProductCommand command) {
+    public void deleteProperty(DeletePropertyCommand command) {
         if (command == null) throw new IllegalArgumentException("Przekazano pusty obiekt komendy");
-
-        if(command.getId() == null || command.getId() == 0)
+        if (command.getId() == null || command.getId() == 0)
             throw new IllegalArgumentException("Nie przekazano identyfikatora właściwości");
 
         var property = propertiesRepository.getById(command.getId());
-
-        if(property == null)
+        if (property == null)
             throw new EntityNotFoundException("Właściwość o podanym identyfikatorze nie istnieje");
 
         propertiesRepository.delete(property);
@@ -314,28 +322,40 @@ public class ProductsService implements IProductsService {
     public void editProperty(EditPropertyCommand command) {
         if (command == null) throw new IllegalArgumentException("Przekazano pusty obiekt komendy");
 
-        if(command.getId() == null || command.getId() == 0)
+        if (command.getId() == null || command.getId() == 0)
             throw new IllegalArgumentException("Nie przekazano identyfikatora właściwości");
 
-        if(command.getPropertyName().isBlank())
+        if (command.getPropertyName() != null && command.getPropertyName().isBlank())
             throw new IllegalArgumentException("Nazwa właściwości nie może być pusta");
 
         var property = propertiesRepository.getById(command.getId());
-
-        if(property == null)
+        if (property == null)
             throw new EntityNotFoundException("Właściwość o podanym identyfikatorze nie istnieje");
 
-        if(command.getPropertyName() == property.getPropertyName() || command.getPropertyName() == null)
+        if (command.getPropertyName() == null)
             return;
 
-        var samePropertyCommand = new GetPropertiesCommand().wherePropertyEquals(command.getPropertyName());
-        var sameProperty = propertiesRepository.findAll(PropertySpecifications.byFilter(samePropertyCommand));
+        if (Objects.equals(command.getPropertyName(), property.getPropertyName()))
+            return;
 
-        if(sameProperty != null)
+        var productId = property.getProduct() != null ? property.getProduct().getId() : null;
+
+        var samePropertyCommand = new GetPropertiesCommand()
+                .wherePropertyEquals(command.getPropertyName());
+
+        if (productId != null) {
+            samePropertyCommand.whereProductId(productId);
+        }
+
+        var sameProperties = propertiesRepository.findAll(PropertySpecifications.byFilter(samePropertyCommand));
+
+        boolean duplicateExists = sameProperties.stream()
+                .anyMatch(p -> !Objects.equals(p.getId(), property.getId()));
+
+        if (duplicateExists)
             throw new IllegalArgumentException("Cecha o takiej nazwie już istnieje");
 
         property.setPropertyName(command.getPropertyName());
-
         propertiesRepository.save(property);
     }
 
@@ -344,30 +364,34 @@ public class ProductsService implements IProductsService {
     public Property registerProperty(RegisterPropertyCommand command) {
         if (command == null) throw new IllegalArgumentException("Przekazano pusty obiekt komendy");
 
-        var property = command.getPropertyName();
+        var propertyName = command.getPropertyName();
         var productId = command.getProductId();
 
-        if(property == null || property.isBlank())
+        if (propertyName == null || propertyName.isBlank())
             throw new IllegalArgumentException("Nie podano nazwy cechy");
 
-        if(productId == null || productId == 0)
+        if (productId == null || productId == 0)
             throw new IllegalArgumentException("Nie podano identyfikatora produktu");
 
-        var product =  this.getProducts(new GetProductsCommand().whereIdEquals(productId)).getFirst();
-        if(product == null)
+        var prodList = this.getProducts(new GetProductsCommand().whereIdEquals(productId));
+        var product = prodList.isEmpty() ? null : prodList.get(0);
+
+        if (product == null)
             throw new EntityNotFoundException("Produkt o podanym identyfikatorze nie istnieje");
 
-        var samePropertyCommand = new GetPropertiesCommand().wherePropertyEquals(property).whereProductId(productId);
-        var sameProperty = propertiesRepository.findAll(PropertySpecifications.byFilter(samePropertyCommand));
+        var samePropertyCommand = new GetPropertiesCommand()
+                .wherePropertyEquals(propertyName)
+                .whereProductId(productId);
 
-        if(sameProperty != null)
+        var sameProperties = propertiesRepository.findAll(PropertySpecifications.byFilter(samePropertyCommand));
+
+        if (!sameProperties.isEmpty())
             throw new IllegalArgumentException("Cecha już istnieje");
 
         var newProperty = new Property();
-        newProperty.setPropertyName(property);
+        newProperty.setPropertyName(propertyName);
         newProperty.setProduct(product);
 
-        var prop = propertiesRepository.save(newProperty);
-        return prop;
+        return propertiesRepository.save(newProperty);
     }
 }
